--- a/hello.html
+++ b/hello.html
@@ -2,8 +2,28 @@
 <html>
 <head>
 	<title>my webpage</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	hello
+	<h1 >HELLO</h1>
+	<form>
+		<input type="text" placeholder="NAME" name="fullname">
+		<button>Sumit</button>
+	</form>
+	<h1></h1>
+	<table>
+		<tr>
+			<th>date</th>
+			<th>month</th>
+			<th>year</th>
+		</tr>
+		<tr>
+			<td>19</td>
+			<td>mar</td>
+			<td>1999</td>
+		</tr>
+	</table>
+	<h1>world</h1>
+	<div> hi there</div>
 </body>
 </html>
